--- a/app/src/main/res/layout/results_layout.xml
+++ b/app/src/main/res/layout/results_layout.xml
@@ -6,8 +6,9 @@
     android:layout_height="match_parent">
 
 <RelativeLayout
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
         android:paddingTop="40dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:gravity="center"/>
 
     <TextView
@@ -31,31 +32,31 @@
         android:paddingRight="20dp"
         android:paddingBottom="20dp"
         android:gravity="center"
-        android:textSize="40dp"/>
+        android:textSize="40sp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/thirdResultsBox"
         android:layout_below="@id/secondResultsBox"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:paddingTop="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"/>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonBack"
         android:layout_below="@id/thirdResultsBox"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:src="@android:drawable/ic_media_play"
         app:fabSize="normal"
         app:elevation="6dp"
         app:pressedTranslationZ="6dp"
         app:backgroundTint="@color/navigationBarColor"
         app:rippleColor="@color/accent_material_light"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         app:borderWidth="0dp"
         android:layout_margin="15dp"/>
 
@@ -64,24 +65,24 @@
         android:layout_height="wrap_content"
         android:id="@+id/field4"
         android:layout_below="@id/buttonBack"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:paddingTop="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonDetalleResults"
         android:layout_below="@id/field4"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:src="@android:drawable/ic_media_play"
         app:fabSize="normal"
         app:elevation="6dp"
         app:pressedTranslationZ="6dp"
         app:backgroundTint="@color/navigationBarColor"
         app:rippleColor="@color/accent_material_light"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         app:borderWidth="0dp"
         android:layout_margin="15dp"/>
 
@@ -89,7 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/field5"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:layout_below="@id/buttonDetalleResults"
         android:paddingTop="10dp"
         android:paddingLeft="10dp"
